# kiota-abstractions-rust

./: Cargo.toml  README.md
src/: additional_data.rs  api_client_builder.rs  authentication.rs  base_request_builder.rs  case_insensitive_map.rs  date_only.rs  error.rs  extensions.rs  http_method.rs  lib.rs  multipart_body.rs  native_response_handler.rs  request_adapter.rs  request_information.rs  request_option.rs  response_handler.rs  time_only.rs
src/serialization/: mod.rs  parsable.rs  parse_node.rs  serialization_writer.rs  untyped_node.rs
src/store/: backed_model.rs  backing_store.rs  in_memory_backing_store.rs  mod.rs
